--- a/metadata.yaml
+++ b/metadata.yaml
@@ -8,6 +8,9 @@ contributor:
     gutenberg_agent_id: '32695'
     url: http://www.gutenberg.org/2009/agents/32695
     wikipedia: https://en.wikipedia.org/wiki/Gayle_Porter_Hoskins
+covers:
+- cover_type: archival
+  image_path: 69514-h/images/cover.jpg
 creator:
   author:
     agent_name: Hill, Grace Livingston
@@ -20,6 +23,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/2299
     wikipedia: https://en.wikipedia.org/wiki/Grace_Livingston_Hill
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/69514#The-best-man
 gutenberg_issued: '2022-12-10'
 identifiers:
   gutenberg: '69514'
